fixing overflow on bibliography

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -477,13 +477,14 @@ section.initial {
 section.call {
   position: relative;
   top: 0;
-  /* padding: 8rem 0; */
   -webkit-box-pack: center;
           justify-content: center;
   -webkit-box-align: center;
           align-items: center;
   background: white;
   height: 100vh; }
+  section.call p a {
+    border-bottom: 1px solid; }
 
 header h1 {
   display: -webkit-box;
@@ -933,6 +934,9 @@ h2:last-of-type {
       max-width: 80%;
       margin: 0 auto;
       margin-bottom: 2em; }
+  .text-bibliography {
+    margin-left: 1em;
+    overflow: visible; }
   .footnotes ol li, .text-bibliography ul li {
     font-size: 10px !important; }
   .text-bibliography {
