--- a/src/css/print.scss
+++ b/src/css/print.scss
@@ -58,6 +58,10 @@
       margin-bottom: 2em;
     }
   }
+  .text-bibliography {
+    margin-left: 1em;
+    overflow: visible;
+  }
 
   .footnotes ol li, .text-bibliography ul li {
     font-size: 10px !important;
